# scheduler-agent

./: README.md  agent.py  requirements.txt  scheduler.py  server.py  test_agent.py  test_reminder.py  uv_run_helper.py
a2a-reminder-agent/: README.md  pyproject.toml  requirements.txt  setup.py  test_client.py
a2a-reminder-agent/agents/reminder/: __main__.py  agent.py  list_reminders.py  pyproject.toml  scheduler.py  task_manager.py
