[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "a2a-reminder-agent"
version = "0.1.0"
authors = [
    {name = "You", email = "you@example.com"},
]
description = "A2A Reminder Agent using LangGraph"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.3.25",
    "langgraph>=0.4.3",
    "apscheduler>=3.10.4",
    "python-dotenv>=1.0.0",
    "openai>=1.6.1",
    "langchain_openai>=0.0.8",
    "requests>=2.31.0",
    "fastapi>=0.103.2",
    "uvicorn>=0.23.2",
    "starlette>=0.27.0",
    "pydantic>=2.7.4",
    "httpx>=0.27.0",
    "click>=8.1.8",
    "cryptography>=42.0.0",
    "httpx-sse>=0.4.0",
    "jwcrypto>=1.5.6",
    "pyjwt>=2.10.1",
    "sse-starlette>=2.2.1",
    "typing-extensions>=4.12.2",
    "pytz>=2024.1",
    "mcp>=1.1.1",
    "mcp-datetime>=0.1.4"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
reminder-agent = "agents.reminder.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["common"]

[tool.uv.workspace]
members = [
    "agents/reminder"
]
